--- a/Platform/ApollolakeBoardPkg/CfgData/CfgData_BootOption.yaml
+++ b/Platform/ApollolakeBoardPkg/CfgData/CfgData_BootOption.yaml
@@ -10,8 +10,8 @@
 
 - $ACTION      :
     page         : OS
-- !expand { BOOT_OPTION_TMPL : [ 0 ,   0    ,   0 ,    2   ,   0   ,    0  ,     0 ,     0 , 'iasimage.bin' ] }
+- !expand { BOOT_OPTION_TMPL : [ 0 ,   0    ,   0 ,    2   ,   0   ,    0  ,     0 ,     0 , 'container.bin' ] }
 - !expand { BOOT_OPTION_TMPL : [ 1 ,   0    ,   0 ,    2   ,   0   ,    0  ,     1 ,     3 , '#0'           ] }
-- !expand { BOOT_OPTION_TMPL : [ 2 ,   0    ,   0 ,    0   ,   0   ,    0  ,     0 ,     0 , 'iasimage.bin' ] }
-- !expand { BOOT_OPTION_TMPL : [ 3 ,   0    ,   0 ,    5   ,   0   ,    0  ,     0 ,     0 , 'iasimage.bin' ] }
+- !expand { BOOT_OPTION_TMPL : [ 2 ,   0    ,   0 ,    0   ,   0   ,    0  ,     0 ,     0 , 'container.bin' ] }
+- !expand { BOOT_OPTION_TMPL : [ 3 ,   0    ,   0 ,    5   ,   0   ,    0  ,     0 ,     0 , 'container.bin' ] }
 - !expand { BOOT_OPTION_TMPL : [ 4 ,   4    ,   0 ,    7   ,   0   ,    0  ,     0 ,     3 , '#0'           ] }
