--- a/Platform/CoffeelakeBoardPkg/CfgData/CfgData_BootOption.yaml
+++ b/Platform/CoffeelakeBoardPkg/CfgData/CfgData_BootOption.yaml
@@ -10,6 +10,6 @@
 
 - $ACTION      :
     page         : OS
-- !expand { BOOT_OPTION_TMPL : [ 0 ,   0    ,   0 ,    5   ,   0   ,    0  ,     0 ,     0 , 'iasimage.bin' ] }
-- !expand { BOOT_OPTION_TMPL : [ 1 ,   0    ,   0 ,    0   ,   0   ,    2  ,     0 ,     0 , 'iasimage.bin' ] }
-- !expand { BOOT_OPTION_TMPL : [ 2 ,   0    ,   0 ,    2   ,   0   ,    0  ,     0 ,     0 , 'iasimage.bin' ] }
+- !expand { BOOT_OPTION_TMPL : [ 0 ,   0    ,   0 ,    5   ,   0   ,    0  ,     0 ,     0 , 'container.bin' ] }
+- !expand { BOOT_OPTION_TMPL : [ 1 ,   0    ,   0 ,    0   ,   0   ,    2  ,     0 ,     0 , 'container.bin' ] }
+- !expand { BOOT_OPTION_TMPL : [ 2 ,   0    ,   0 ,    2   ,   0   ,    0  ,     0 ,     0 , 'container.bin' ] }
