feat:[ARL] Upstream Vbt Binary
Upstream Vbt binary for Arrowlake platform

Signed-off-by: kokweich <kok.wei.chan@intel.com>

--- a/Platform/.gitignore
+++ b/Platform/.gitignore
@@ -4,6 +4,7 @@ VerInfo.txt
 !CoffeelakeBoardPkg/VbtBin/
 !AlderlakeBoardPkg/VbtBin/
 !ApollolakeBoardPkg/VbtBin/Vbt_*.*
+!ArrowlakeBoardPkg/VbtBin/*
 *.json
 !RaptorlakeBoardPkg/VbtBin/Vbt_rplp*.*
 !RaptorlakeBoardPkg/VbtBin/VbtRplPs*.*
