--- a/.gitattributes
+++ b/.gitattributes
@@ -17,3 +17,4 @@
 # since the files that are being patched have a mixture of line
 # endings. This means it must be treated as binary.
 Silicon/QemuSocPkg/FspBin/Patches/0001-Build-QEMU-FSP-2.0-binaries.patch binary
+Silicon/QemuSocPkg/FspBin/Patches/0002-BaseTools-GCC-newer-versions-fix-Synced-with-EDK2.patch binary
