feat: [MTL] expose fsp-m .OcLock UPD option to SBL config data
The FSP-S UPD has an option .OcLock that cannot be modified from
SBL configuration. Need this for controlling the max turbo frequency.

Tested on mtl-ps crb with those config changed.
 POWER_CFG_DATA.OcLock                         | 0
 POWER_CFG_DATA.TurboRatioLimitRatio           | {0x28, 0x28, 0x28, 0x28, 0x26, 0x26, 0x26, 0x26}
 POWER_CFG_DATA.AtomTurboRatioLimitRatio       | {0x1F, 0x1F, 0x1F, 0x1F, 0x1C, 0x1C, 0x1C, 0x1C}
 POWER_CFG_DATA.TurboRatioLimitNumCore         | {0x01, 0x02, 0x03, 0x04, 0x05, 0x06, 0x07, 0x08}
 POWER_CFG_DATA.AtomTurboRatioLimitNumCore     | {0x01, 0x02, 0x03, 0x04, 0x05, 0x06, 0x07, 0x08}

Signed-off-by: Randy <randy.lin@intel.com>

--- a/Platform/MeteorlakeBoardPkg/CfgData/CfgData_Power.yaml
+++ b/Platform/MeteorlakeBoardPkg/CfgData/CfgData_Power.yaml
@@ -1071,6 +1071,42 @@
                      Reserved for CPU Post-Mem Production
       length       : 0x8
       value        : {0x00}
+  - OcLock :
+      name         : Over clocking Lock
+      type         : Combo
+      option       : $EN_DIS
+      help         : >
+                     Lock Overclocking. 0: Disable; <b>1: Enable
+      length       : 0x01
+      value        : 0x01
+  - TurboRatioLimitRatio :
+      name         : Turbo Ratio Limit Ratio array
+      type         : EditNum, HEX, (0x00,0xFFFFFFFFFFFFFFFF)
+      help         : >
+                     TurboRatioLimitRatio[7-0] will pair with TurboRatioLimitNumCore[7-0] to determine the active core ranges for each frequency point.
+      length       : 0x08
+      value        : {0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00}
+  - TurboRatioLimitNumCore :
+      name         : Turbo Ratio Limit Num Core array
+      type         : EditNum, HEX, (0x00, 0xFFFFFFFF)
+      help         : >
+                     TurboRatioLimitNumCore[7-0] will pair with TurboRatioLimitRatio[7-0] to determine the active core ranges for each frequency point.
+      length       : 0x08
+      value        : {0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00}
+  - AtomTurboRatioLimitRatio :
+      name         : Turbo Ratio Limit Ratio array
+      type         : EditNum, HEX, (0x00,0xFFFFFFFFFFFFFFFF)
+      help         : >
+                     AtomTurboRatioLimitRatio[7-0] will pair with AtomTurboRatioLimitNumCore[7-0] to determine the active core ranges for each frequency point.
+      length       : 0x08
+      value        : {0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00}
+  - AtomTurboRatioLimitNumCore :
+      name         : Turbo Ratio Limit Ratio array
+      type         : EditNum, HEX, (0x00,0xFFFFFFFFFFFFFFFF)
+      help         : >
+                     AtomTurboRatioLimitNumCore[7-0] will pair with AtomTurboRatioLimitRatio[7-0] to determine the active core ranges for each frequency point.
+      length       : 0x08
+      value        : {0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00}
   - Dummy        :
-      length       : 0x2
+      length       : 0x1
       value        : 0x0
