[UPX i14] Enable UPX i14 basic boot
Add SBL support for UP Xtreme i14 MTL-based Board.
The PCIe M.2 slot CN11 on the board is able to detect NVMe SSD.
Debug output is enabled at header CN17 (USB/UART port) on the board
Currently able to boot on Windows with UEFI payload, but there were sudden
intermittent shutdown after Windows boot.

Command used to stitch SlimBootloader.bin with specific -p parameter:
python Platform\MeteorlakeBoardPkg\Script\StitchLoader.py -i <BIOS_Image_
Name> -s Outputs\mtl\SlimBootloader.bin -o <SBL_output_name> -p 0xAA000109

Signed-off-by: Ong Ee Lim <ee.lim.ong@intel.com>

--- a/Platform/MeteorlakeBoardPkg/CfgData/CfgData_MemSpd.yaml
+++ b/Platform/MeteorlakeBoardPkg/CfgData/CfgData_MemSpd.yaml
@@ -36,6 +36,7 @@
       help         : >
                      Pointer to SPD data in Memory
       length       : 0x200
+      value        : {FILE: Spd_Data_MtlP_Upx14.bin}
 
 - MEM_SPD2_CFG_DATA :
   - !expand { CFGHDR_TMPL : [ MEM_SPD2_CFG_DATA, 0x8F2, 0, 0 ] }
