--- a/Platform/MeteorlakeBoardPkg/CfgData/CfgData_Silicon.yaml
+++ b/Platform/MeteorlakeBoardPkg/CfgData/CfgData_Silicon.yaml
@@ -477,3 +477,11 @@
   - SiliconRsvd  :
       length       : 0x02
       value        : 0x00
+  - GnaEnable :
+      name         : GNA Enable
+      type         : Combo
+      option       : $EN_DIS
+      help         : >
+                     Enable or disable GNA device
+      length       : 0x01
+      value        : 0x1
